# smart-code-reviewer

./: README.md  app.py  cli.py  pyproject.toml  reviewer.py  samples.py
npm-package/: .env.example  .gitignore  .npmignore  README.md  example-usage.ts  package-lock.json  package.json  test-good.tsx  test-hook.ts  test-sample.tsx
npm-package/.husky/: pre-commit
npm-package/src/: cli.ts  groq.ts  index.ts  types.ts
