[project]
name = "smart-code-reviewer"
version = "0.1.0"
description = "AI-powered code reviewer for readability, structure, and maintainability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "pygments>=2.17.0",
]

[project.scripts]
smart-code-reviewer = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
